--- a/Alura/Testes Angular/src/app/shared/components/like-widget/like-widget.component.html
+++ b/Alura/Testes Angular/src/app/shared/components/like-widget/like-widget.component.html
@@ -1,7 +1,13 @@
-<div class="like-widget-container">
-  <fa-icon [icon]="fonts.faThumbsUp">
+<div class="like-widget-container" (click)="like()" (keyup.enter)="like()">
+  <fa-icon
+  [attr.aria-describedby]="id"
+  role="button"
+  size="1x"
+  tabindex="0" [icon]="fonts.faThumbsUp">
   </fa-icon>
-  <span class="like-counter">
+  <span
+  [attr.id]="id" [attr.aria-label]="likes + ': people liked'" aria-live="true" aria-atomic="true"
+  class="like-counter">
     {{likes}}
   </span>
 </div>
