--- a/Alura/Testes Angular/src/app/shared/components/like-widget/like-widget.component.html
+++ b/Alura/Testes Angular/src/app/shared/components/like-widget/like-widget.component.html
@@ -1,13 +1,19 @@
-<div class="like-widget-container" (click)="like()" (keyup.enter)="like()">
+<div class="like-widget-container"
+  (click)="like()"
+  (keyup.enter)="like()">
   <fa-icon
-  [attr.aria-describedby]="id"
-  role="button"
-  size="1x"
-  tabindex="0" [icon]="fonts.faThumbsUp">
+    role="button"
+    tabindex="0"
+    [attr.aria-describedby]="id"
+    size="1x"
+    [icon]="fonts.faThumbsUp">
   </fa-icon>
   <span
-  [attr.id]="id" [attr.aria-label]="likes + ': people liked'" aria-live="true" aria-atomic="true"
-  class="like-counter">
-    {{likes}}
+    [attr.id]="id"
+    [attr.aria-label]="likes + ': people liked'"
+    class="like-counter"
+    aria-live="true"
+    aria-atomic="true">
+    {{ likes }}
   </span>
 </div>
