--- a/Alura/Testes Angular/src/app/shared/components/photo-frame/photo-frame.component.html
+++ b/Alura/Testes Angular/src/app/shared/components/photo-frame/photo-frame.component.html
@@ -1,9 +1,8 @@
 <div class="photo-frame-container">
   <img class="photo" tabindex="0" [src]="src" [alt]="description">
   <div class="like-bar">
-    <app-like-widget>
-      [likes]="likes"
-      (liked)="like()"
+    <app-like-widget [likes]="likes"
+    (liked)="like()">
     </app-like-widget>
   </div>
 </div>
